# puc

./: .gitignore  .gitmodules  .mcp.json  Cargo.toml  LICENSE  README.md
assets/: data.csv  natural_fast.csv  natural_slow.csv
crates/pvz-emulator-sys/: Cargo.toml  build.rs
crates/pvz-emulator-sys/shim/: calc_explode.cpp  calc_pogo.cpp  calc_pos.cpp  calc_refresh.cpp  calc_smash.cpp  calc_survive.cpp  params.h  puc_shim.cpp  puc_shim.h
crates/pvz-emulator-sys/src/: lib.rs
doc/: README_en.md  intercept.md  seml.md
locales/: app.yml  seml.yml
src/: constants.rs  game.rs  lib.rs  main.rs  mcp.rs  output.rs  parser.rs  printer.rs  tables.rs
src/calc/: coord.rs  extreme.rs  ipp.rs  mod.rs  time.rs
src/lang/: en.rs  zh.rs
src/seml/: csv.rs  format.rs  mod.rs  parser.rs  plant.rs  reuse.rs  string.rs  types.rs  zombie.rs
src/zmc/: calculate_pos_distribution.rs  common.rs  mod.rs  parse_data.rs
tests/: golden.rs  seml_csv.rs
tests/fixtures/: explode.seml  pogo.seml  pos.seml  refresh.seml  reuse_loop.seml  reuse_noloop.seml  smash.seml  survive.seml
