[package]
name = "puc"
version = "0.1.1"
edition = "2021"
description = "PvZ's Ultimate Calculator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/pvz-emulator-sys"]

[dependencies]
pvz-emulator-sys = { path = "crates/pvz-emulator-sys" }
dyn-fmt = "0.4.0"
evalexpr = "13.1.0"
termcolor = "1.2"
csv = "1.1.6"
lazy_static = "1.4.0"
libm = "0.2.6"
num-integer = "0.1.45"
num-rational = { version = "0.4.1", features = ["std"] }
num-traits = "0.2.15"
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"], optional = true }
chrono = "0.4.45"

[features]
default = ["zh", "mcp"]
en = []
zh = []
# `mcp` pulls in the async stack for `puc mcp-server`; build with
# `--no-default-features --features zh` (or `en`) for a lean CLI without
# rmcp/tokio. A language feature (`zh` or `en`) is always required.
mcp = ["dep:rmcp", "dep:tokio"]
